Make chain and handlers generic over identity type